company action button positon fixed and regsiter page layout alignment fixed

--- a/src/app/user-onboard/common-components/company-structure-card/company-structure-card.component.scss
+++ b/src/app/user-onboard/common-components/company-structure-card/company-structure-card.component.scss
@@ -34,10 +34,12 @@
 
 .tree-container {
   transform-origin: 0 0;
-  transition: transform 0.3s; 
+  transition: transform 0.3s;
+  width: 0%!important;
 }
 .full-screen-content-container{
   padding: 0 50px;
+
 }
 .zoom-controls {
   margin-bottom: -5px;
