--- a/src/app/user-onboard/common-components/tree-structure/tree-structure.component.scss
+++ b/src/app/user-onboard/common-components/tree-structure/tree-structure.component.scss
@@ -8,7 +8,9 @@
   z-index: 2;
 }
 
-
+.tree{
+  width: fit-content;
+}
 .tree,
 .tree ul {
   list-style-type: none;
